Initial commit - Section 2 setup

--- a/Coffeshop/appsettings.json
+++ b/Coffeshop/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CoffeeShopDbContextConnection": "Server=DESKTOP-TNS7TIH\\MSSQLSERVER02;Database=CoffeeShopDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
+
 }
